Implement a compression algorithm for expanded gaddag